# latex-evaluator

./: .gitignore  CMakeLists.txt  README.md
cmake/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake
src/: main.cpp
src/evaluator/: Evaluator.cpp  Evaluator.h
src/lang/: Latex.g4  Latex.interp  LatexBaseVisitor.cpp  LatexBaseVisitor.h  LatexLexer.cpp  LatexLexer.h  LatexLexer.interp  LatexLexer.tokens  LatexParser.cpp  LatexParser.h  LatexVisitor.cpp  LatexVisitor.h
src/runner/: Runner.cpp  Runner.h
src/utils/: utils.cpp  utils.h
